<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.candlk</groupId>
		<artifactId>candlk-server</artifactId>
		<version>1.0.0</version>
	</parent>

	<artifactId>condlk-user</artifactId>
	<packaging>jar</packaging>
	<properties>
		<env-version>1.0.0</env-version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
	</properties>

	<dependencies>
		<!-- ES 客户端 -->
		<dependency>
			<groupId>co.elastic.clients</groupId>
			<artifactId>elasticsearch-java</artifactId>
			<version>9.0.0</version>
		</dependency>
		<!-- ES 引擎依赖httpclient实现通讯 -->
		<dependency>
			<groupId>org.apache.httpcomponents.core5</groupId>
			<artifactId>httpcore5</artifactId>
			<version>5.3.3</version>
		</dependency>

		<!-- HTTP Client 5 (for connection management) -->
		<dependency>
			<groupId>org.apache.httpcomponents.client5</groupId>
			<artifactId>httpclient5</artifactId>
			<version>5.4.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents.core5</groupId>
			<artifactId>httpcore5-h2</artifactId>
			<version>5.3.3</version>
		</dependency>

		<!-- ES 引擎基于此解析数据 -->
		<dependency>
			<groupId>jakarta.json</groupId>
			<artifactId>jakarta.json-api</artifactId>
			<version>2.1.3</version>
		</dependency>
		<!-- HanLP 面向生产环境的多语种自然语言分词 模型 -->
		<dependency>
			<groupId>com.hankcs</groupId>
			<artifactId>hanlp</artifactId>
			<version>portable-1.8.6</version>
		</dependency>

		<dependency>
			<groupId>software.sava</groupId>
			<artifactId>sava-core</artifactId>
			<version>1.17.32</version>
			<scope>system</scope>
			<systemPath>${project.basedir}\lib\sava-core-1.17.32.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>software.sava</groupId>
			<artifactId>sava-rpc</artifactId>
			<version>1.17.32</version>
			<scope>system</scope>
			<systemPath>${project.basedir}\lib\sava-rpc-1.17.32.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>com.candlk</groupId>
			<artifactId>base</artifactId>
			<version>${env-version}</version>
		</dependency>

		<dependency>
			<groupId>com.candlk</groupId>
			<artifactId>common-alarm</artifactId>
			<version>1.0.0</version>
		</dependency>

		<!-- web3j SDK -->
		<dependency>
			<groupId>org.web3j</groupId>
			<artifactId>core</artifactId>
			<version>4.10.3</version>
		</dependency>
		<dependency>
			<groupId>com.squareup.okhttp3</groupId>
			<artifactId>okhttp</artifactId>
			<version>4.12.0</version>
		</dependency>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.17.2</version>
		</dependency>

		<dependency>
			<groupId>com.candlk</groupId>
			<artifactId>common-gencode</artifactId>
			<version>1.0.0</version>
			<scope>test</scope>
		</dependency>

		<!--ip 解析 https://mvnrepository.com/artifact/com.maxmind.geoip2/geoip2-->
		<!-- https://github.com/P3TERX/GeoLite.mmdb/releases -->
		<dependency>
			<groupId>com.maxmind.geoip2</groupId>
			<artifactId>geoip2</artifactId>
			<version>4.1.0</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<executions>
					<execution>
						<id>default-jar</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<archive>
								<manifestEntries>
									<Add-Opens>java.base/java.lang java.base/java.util java.base/java.math</Add-Opens>
								</manifestEntries>
							</archive>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<executable>true</executable>
					<mainClass>com.candlk.webapp.UserApplication</mainClass>
				</configuration>
				<executions>
					<execution>
						<id>executable-jar</id>
						<goals>
							<goal>repackage</goal>
						</goals>
						<configuration>
							<executable>true</executable>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>23</source>
					<target>23</target>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
